# hidden-markov-model

./: .gitignore  README.md  bigrams.py  fetcher.py  flake.nix  full_english_transmat.npy  hmm_cryptanalysis.py  main.py  pyproject.toml  run_training.sh
ciphers/: beale_pt2.json  c_10000_10.json  c_10000_15.json  c_10000_20.json  c_10000_25.json  c_10000_30.json  c_10000_5.json  c_4000_10.json  c_4000_15.json  c_4000_20.json  c_4000_25.json  c_4000_30.json  c_4000_5.json  c_400_10.json  c_400_15.json  c_400_20.json  c_400_25.json  c_400_30.json  c_400_5.json  c_6000_10.json  c_6000_15.json  c_6000_20.json  c_6000_25.json  c_6000_30.json  c_6000_5.json  c_800_10.json  c_800_15.json  c_800_20.json  c_800_25.json  c_800_30.json  c_800_5.json  c_mono_4000.json  cipher-20.json  cipher-30.json  mono.json
utils/: files.py  formatting.py
